@@ -586,7 +586,7 @@ BEGIN
   -- grouped by (tag, vid, uid), so only one user votes on one parent tag per VN entry
   CREATE OR REPLACE TEMPORARY VIEW tags_vn_grouped AS
     SELECT tag, vid, uid, MAX(vote)::real AS vote, COALESCE(AVG(spoiler), 0)::real AS spoiler
-    FROM tags_vn_all WHERE vote > 0 GROUP BY tag, vid, uid;
+    FROM tags_vn_all GROUP BY tag, vid, uid;
   -- grouped by (tag, vid) and serialized into a table
   DROP INDEX IF EXISTS tags_vn_bayesian_tag;
   TRUNCATE tags_vn_bayesian;
@@ -594,7 +594,8 @@ BEGIN
       SELECT tag, vid, COUNT(uid) AS users, AVG(vote)::real AS rating,
           (CASE WHEN AVG(spoiler) < 0.7 THEN 0 WHEN AVG(spoiler) > 1.3 THEN 2 ELSE 1 END)::smallint AS spoiler
         FROM tags_vn_grouped
-    GROUP BY tag, vid;
+    GROUP BY tag, vid
+      HAVING AVG(vote) > 0;
   CREATE INDEX tags_vn_bayesian_tag ON tags_vn_bayesian (tag);
   -- now perform the bayesian ranking calculation
   UPDATE tags_vn_bayesian tvs SET rating =
